@@ -1,4 +1,4 @@
-# FatturaElettronica.Core [![Build status](https://ci.appveyor.com/api/projects/status/a8457mp4xm5wp7rx?svg=true)](https://ci.appveyor.com/project/nicolaiarocci/fatturaelettronica-core)
+# FatturaElettronica.Core [![Build Status](https://dev.azure.com/FatturaElettronicaNET/FatturaElettronica.Core/_apis/build/status/FatturaElettronica.FatturaElettronica.Core?branchName=master)](https://dev.azure.com/FatturaElettronicaNET/FatturaElettronica.Core/_build/latest?definitionId=2&branchName=master)
 
 Core services per la fatturazione elettronica sia tra privati che con la pubblica amministrazione italiana.
 
